modifies to use sun.misc.Unsafe#defineClass so that Javassist can run with jigsaw